[CERTIF] Rename in challenge issue label

--- a/certif/app/components/issue-report-modal/in-challenge-certification-issue-report-fields.hbs
+++ b/certif/app/components/issue-report-modal/in-challenge-certification-issue-report-fields.hbs
@@ -12,7 +12,7 @@
   </div>
   {{#if @inChallengeCategory.isChecked}}
     <div class="candidate-information-change-certification-issue-report-fields__details">
-      <label for="input-for-category-in-challenge-question-number">Numéro d'épreuve :</label>
+      <label for="input-for-category-in-challenge-question-number">Numéro de question :</label>
       <Input
         @id="input-for-category-in-challenge-question-number"
         @name="question-number"
