[ADMIN] Rename in challenge issue label

--- a/admin/app/templates/authenticated/certifications/certification/informations.hbs
+++ b/admin/app/templates/authenticated/certifications/certification/informations.hbs
@@ -56,7 +56,7 @@
                       {{issueReport.categoryLabel}}
                       {{#if issueReport.subcategoryLabel}}: {{issueReport.subcategoryLabel}}{{/if}}
                       {{#if issueReport.description}}- {{issueReport.description}}{{/if}}
-                      {{#if issueReport.questionNumber}}- Épreuve {{issueReport.questionNumber}}{{/if}}
+                      {{#if issueReport.questionNumber}}- Question {{issueReport.questionNumber}}{{/if}}
                     </li>
                   {{/each}}
                 </ul>
