feat(admin): add complementary certifications mentions in certification information page

--- a/admin/app/styles/authenticated/certifications/certification/informations.scss
+++ b/admin/app/styles/authenticated/certifications/certification/informations.scss
@@ -13,11 +13,11 @@
     float: right;
   }
 
-  &__clea--acquired .certification-info-value {
+  &__complementary-certification--acquired {
     color: $success;
     font-weight: bold;
   }
-  &__clea--rejected .certification-info-value {
+  &__complementary-certification--rejected {
     color: $error;
     font-weight: bold;
   }
