--- a/admin/app/templates/authenticated/certifications/certification/informations.hbs
+++ b/admin/app/templates/authenticated/certifications/certification/informations.hbs
@@ -14,7 +14,9 @@
             <Certification::CertificationInfoField @value={{this.certification.completionDate}} @edition={{false}} @label="Terminée le :" />
             <Certification::CertificationInfoField @value={{this.certification.publishedText}} @edition={{false}} @label="Publiée :" />
             <Certification::CertificationInfoField @value={{this.certification.isV2CertificationText}} @edition={{false}} @label="Certification v2 :" />
-            <Certification::CertificationInfoField @value={{this.certification.displayCleaCertificationStatus}} @edition={{false}} @label="Certification CléA numérique :" @class={{this.cleaStatusClass}} />
+            <Certification::CertificationInfoField @value={{this.certification.cleaCertificationStatusLabel}} @edition={{false}} @label="Certification CléA numérique :" @class="certification-informations__complementary-certification--{{this.certification.cleaCertificationStatus}}" />
+            <Certification::CertificationInfoField @value={{this.certification.pixPlusDroitMaitreCertificationStatusLabel}} @edition={{false}} @label="Certification Pix+ Droit Maître :" @class="certification-informations__complementary-certification--{{this.certification.pixPlusDroitMaitreCertificationStatus}}" />
+            <Certification::CertificationInfoField @value={{this.certification.pixPlusDroitExpertCertificationStatusLabel}} @edition={{false}} @label="Certification Pix+ Droit Expert :" @class="certification-informations__complementary-certification--{{this.certification.pixPlusDroitExpertCertificationStatus}}" />
           </div>
         </div>
       </div>
