--- a/admin/app/styles/components/badges/badge.scss
+++ b/admin/app/styles/components/badges/badge.scss
@@ -9,3 +9,11 @@
     margin: 8px 0;
   }
 }
+
+.badge-criteria-competences {
+  list-style-type: none;
+}
+
+.badge-partner-competences-table {
+  margin: 20px 0;
+}
