--- a/mon-pix/app/templates/components/certifications-list-item.hbs
+++ b/mon-pix/app/templates/components/certifications-list-item.hbs
@@ -2,77 +2,17 @@
 <div class="certifications-list-item {{if this.isPublished 'certifications-list-item__published-item' 'certifications-list-item__unpublished-item'}}
   {{if this.isClickable 'certifications-list-item__clickable' 'certifications-list-item__not-clickable'}}">
 
-  {{#if this.isPublishedAndRejected}}
-    <CpPanel as |panel|>
-      <panel.toggle @class="certifications-list-item__row-presentation" @role="tab">
+  {{#if this.isCancelled}}
+  <CpPanel as |panel|>
+    <panel.toggle @class="certifications-list-item__row-presentation" @role="tab">
 
-        <div class="certifications-list-item__cell">
-          {{moment-format @certification.date 'DD/MM/YYYY'}}
-        </div>
-
-        <div class="certifications-list-item__cell-double-width">
-          <img src="/images/icons/icon-croix.svg" alt="" role="presentation" class="certifications-list-item__cross-img">
-          {{t "pages.certifications-list.statuses.fail.title"}}
-        </div>
-        <div class="certifications-list-item__cell-pix-score"></div>
-
-        <div class="certifications-list-item__cell-certification-center">
-          {{@certification.certificationCenter}}
-        </div>
-
-        <div class="certifications-list-item__cell-detail">
-          {{#if this.shouldDisplayComment}}
-            <button type="button">{{t "pages.certifications-list.statuses.fail.action"}}</button>
-          {{/if}}
-        </div>
-      </panel.toggle>
-
-      {{#if this.shouldDisplayComment}}
-        <panel.body @class="certifications-list-item__row-comment" @role="tabpanel">
-          <div class="certifications-list-item__row-comment-cell">
-            {{@certification.commentForCandidate}}
-          </div>
-        </panel.body>
-      {{/if}}
-
-    </CpPanel>
-  {{/if}}
-
-  {{#if this.isPublishedAndValidated}}
-    <LinkTo @route="user-certifications.get" @model={{@certification.id}} class="certifications-list-item__row-presentation">
       <div class="certifications-list-item__cell">
         {{moment-format @certification.date 'DD/MM/YYYY'}}
       </div>
 
       <div class="certifications-list-item__cell-double-width">
-        <img src="/images/icons/icon-check-vert.svg" alt="" role="presentation" class="certifications-list-item__green-check-img">
-        {{t "pages.certifications-list.statuses.success.title"}}
-      </div>
-      <div class="certifications-list-item__cell-pix-score">
-        <div class="certifications-list-item__pix-score">
-          <span>{{ @certification.pixScore }}</span>
-        </div>
-      </div>
-
-      <div class="certifications-list-item__cell-certification-center">
-        {{@certification.certificationCenter}}
-      </div>
-
-      <div class="certifications-list-item__cell-detail">
-        <a>{{t "pages.certifications-list.statuses.success.action"}}</a>
-      </div>
-    </LinkTo>
-  {{/if}}
-
-  {{#if this.isNotPublished}}
-    <div class="certifications-list-item__row-presentation">
-      <div class="certifications-list-item__cell">
-        {{moment-format @certification.date 'DD/MM/YYYY'}}
-      </div>
-
-      <div class="certifications-list-item__cell-double-width">
-        <img src="/images/icons/sablier.svg" alt="" role="presentation" class="certifications-list-item__hourglass-img">
-        {{t "pages.certifications-list.statuses.not-published.title"}}
+        <img src="/images/icons/icon-croix.svg" alt="" role="presentation" class="certifications-list-item__cross-img">
+        {{t "pages.certifications-list.statuses.cancelled.title"}}
       </div>
       <div class="certifications-list-item__cell-pix-score"></div>
 
@@ -81,7 +21,96 @@
       </div>
 
       <div class="certifications-list-item__cell-detail">
+        {{#if this.shouldDisplayComment}}
+          <button type="button">{{t "pages.certifications-list.statuses.fail.action"}}</button>
+        {{/if}}
       </div>
-    </div>
+    </panel.toggle>
+
+    {{#if this.shouldDisplayComment}}
+      <panel.body @class="certifications-list-item__row-comment" @role="tabpanel">
+        <div class="certifications-list-item__row-comment-cell">
+          {{@certification.commentForCandidate}}
+        </div>
+      </panel.body>
+    {{/if}}
+
+  </CpPanel>
+    {{else if this.isPublishedAndRejected}}
+      <CpPanel as |panel|>
+        <panel.toggle @class="certifications-list-item__row-presentation" @role="tab">
+
+          <div class="certifications-list-item__cell">
+            {{moment-format @certification.date 'DD/MM/YYYY'}}
+          </div>
+
+          <div class="certifications-list-item__cell-double-width">
+            <img src="/images/icons/icon-croix.svg" alt="" role="presentation" class="certifications-list-item__cross-img">
+            {{t "pages.certifications-list.statuses.fail.title"}}
+          </div>
+          <div class="certifications-list-item__cell-pix-score"></div>
+
+          <div class="certifications-list-item__cell-certification-center">
+            {{@certification.certificationCenter}}
+          </div>
+
+          <div class="certifications-list-item__cell-detail">
+            {{#if this.shouldDisplayComment}}
+              <button type="button">{{t "pages.certifications-list.statuses.fail.action"}}</button>
+            {{/if}}
+          </div>
+        </panel.toggle>
+
+        {{#if this.shouldDisplayComment}}
+          <panel.body @class="certifications-list-item__row-comment" @role="tabpanel">
+            <div class="certifications-list-item__row-comment-cell">
+              {{@certification.commentForCandidate}}
+            </div>
+          </panel.body>
+        {{/if}}
+      </CpPanel>
+    {{else if this.isPublishedAndValidated}}
+      <LinkTo @route="user-certifications.get" @model={{@certification.id}} class="certifications-list-item__row-presentation">
+        <div class="certifications-list-item__cell">
+          {{moment-format @certification.date 'DD/MM/YYYY'}}
+        </div>
+
+        <div class="certifications-list-item__cell-double-width">
+          <img src="/images/icons/icon-check-vert.svg" alt="" role="presentation" class="certifications-list-item__green-check-img">
+          {{t "pages.certifications-list.statuses.success.title"}}
+        </div>
+        <div class="certifications-list-item__cell-pix-score">
+          <div class="certifications-list-item__pix-score">
+            <span>{{ @certification.pixScore }}</span>
+          </div>
+        </div>
+
+        <div class="certifications-list-item__cell-certification-center">
+          {{@certification.certificationCenter}}
+        </div>
+
+        <div class="certifications-list-item__cell-detail">
+          <a>{{t "pages.certifications-list.statuses.success.action"}}</a>
+        </div>
+      </LinkTo>
+    {{else if this.isNotPublished}}
+      <div class="certifications-list-item__row-presentation">
+        <div class="certifications-list-item__cell">
+          {{moment-format @certification.date 'DD/MM/YYYY'}}
+        </div>
+
+        <div class="certifications-list-item__cell-double-width">
+          <img src="/images/icons/sablier.svg" alt="" role="presentation" class="certifications-list-item__hourglass-img">
+          {{t "pages.certifications-list.statuses.not-published.title"}}
+        </div>
+        <div class="certifications-list-item__cell-pix-score"></div>
+
+        <div class="certifications-list-item__cell-certification-center">
+          {{@certification.certificationCenter}}
+        </div>
+
+        <div class="certifications-list-item__cell-detail">
+        </div>
+      </div>
   {{/if}}
 </div>
