Fix certification candidate birthdate entry
Ce qu’on a appris : la lib ember-inputmask qu’on utilise ne fonctionne
pas correctement pour mettre à jour la valeur de la date quand on
inverse les caractères entre input (dd/mm/yyyy) et output (yyyy-mm-dd).

La ligne de code qui semble coincer dans la lib :

https://github.com/brandynbennett/ember-inputmask/blob/84cee4e/addon/components/one-way-input-mask.js#L229

Composant : OneWayDateMask, dérivant de OneWayInputMask.

Pour reproduire le pb dans la console du navigateur :

```
> let IM = require('inputmask')
> const options = {
    inputFormat:'dd/mm/yyyy',
    outputFormat: 'yyyy-mm-dd',
    alias:'datetime'
}

> // vvvvvv Ce qui se passe quand on tape
> //        20/03/20 puis 20/03/200 puis 20/03/2000

> IM.format('20yy-03-20', options)
"20/03/20yy"
> // ^^^^^^ semble ok ?

> IM.format('200y-03-20', options)
"20/03/20yy"
> // ^^^^^^ c'est n'importe quoi (il manque un zéro)

> IM.format('2000-03-20', options)
"20/03/20yy"
> // ^^^^^^ c'est n'importe quoi et c'est identique à la valeur
> //        précédente donc le callback d'update n'est pas appelé

> // vvvvvv Ce qui se passe quand on tape
> //        20/03/200 puis 20/03/2001

> IM.format('200y-03-20', options)
"20/03/20yy"
> // ^^^^^^ c'est n'importe quoi (il manque un zéro)

> IM.format('2001-03-20', options)
"20/01/0320"
> // ^^^^^^ c'est n'importe quoi mais c'est différent de la valeur
> //        précédente donc le callback d'update est appelé
```

--- a/certif/app/components/certification-candidate-in-staging-item.hbs
+++ b/certif/app/components/certification-candidate-in-staging-item.hbs
@@ -26,7 +26,7 @@
       <OneWayDateMask
           required
           @placeholder='dd/mm/yyyy'
-          @options={{hash inputFormat='dd/mm/yyyy' outputFormat='yyyy-mm-dd'}}
+          @options={{hash inputFormat='dd/mm/yyyy' outputFormat='dd/mm/yyyy'}}
           @class="certification-candidates-input {{if this.birthdateFocused 'focused'}}"
           id="certification-candidates-input-birthdate"
           {{on 'focus' this.focusBirthdate}}
