upgrade: ember-template-lint with exceptions

--- a/mon-pix/app/components/routes/campaigns/fill-in-participant-external-id.hbs
+++ b/mon-pix/app/components/routes/campaigns/fill-in-participant-external-id.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-action require-input-label --}}
+{{!-- template-lint-disable no-action require-input-label no-unknown-arguments-for-builtin-components --}}
 <main class="rounded-panel rounded-panel--strong rounded-panel--over-background-banner fill-in-participant-external-id__container">
   <h1 class="fill-in-participant-external-id-text fill-in-participant-external-id-text__title">{{t 'pages.fill-in-participant-external-id.first-title'}}</h1>
   <p class="fill-in-participant-external-id-text fill-in-participant-external-id-text__announcement">
