--- a/mon-pix/app/components/routes/campaigns/restricted/join-sco.hbs
+++ b/mon-pix/app/components/routes/campaigns/restricted/join-sco.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable require-input-label no-triple-curlies --}}
+{{!-- template-lint-disable require-input-label no-triple-curlies no-unknown-arguments-for-builtin-components --}}
 <form>
   <div class="join-restricted-campaign__row">
     <label class="join-restricted-campaign__label">{{t 'pages.join.fields.firstname.label'}}</label>
