--- a/mon-pix/app/templates/assessments/results.hbs
+++ b/mon-pix/app/templates/assessments/results.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable no-unknown-arguments-for-builtin-components --}}
 {{page-title (t 'pages.assessment-results.title')}}
 
 <div class="assessment-results">
