--- a/mon-pix/app/templates/campaigns/fill-in-participant-external-id.hbs
+++ b/mon-pix/app/templates/campaigns/fill-in-participant-external-id.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable no-unknown-arguments-for-builtin-components --}}
 {{page-title (t 'pages.fill-in-participant-external-id.title')}}
 <div class="background-banner-wrapper">
   <div class="background-banner"></div>
