--- a/mon-pix/app/templates/components/certification-joiner.hbs
+++ b/mon-pix/app/templates/components/certification-joiner.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable no-unknown-arguments-for-builtin-components no-bare-strings --}}
 {{#if this.showCongratulationsBanner }}
   <CongratulationsCertificationBanner @fullName={{this.currentUser.user.fullName}} @closeBanner={{this.closeBanner}}/>
 {{/if}}
