--- a/mon-pix/app/templates/components/certification-results-page.hbs
+++ b/mon-pix/app/templates/components/certification-results-page.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable require-input-label --}}
+{{!-- template-lint-disable require-input-label no-unknown-arguments-for-builtin-components --}}
 <div class="certification-results__certification-banner">
   <CertificationBanner @certificationNumber={{@certificationNumber}} />
 </div>
