--- a/mon-pix/app/templates/components/certification-starter.hbs
+++ b/mon-pix/app/templates/components/certification-starter.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-action require-input-label --}}
+{{!-- template-lint-disable no-action require-input-label no-unknown-arguments-for-builtin-components --}}
 <section class="certification-starter">
     <h2 class="certification-start-page__title">{{t "pages.certification-start.first-title"}}</h2>
 
