--- a/mon-pix/app/templates/components/feedback-panel.hbs
+++ b/mon-pix/app/templates/components/feedback-panel.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable require-input-label no-unknown-arguments-for-builtin-components --}}
 <div class="feedback-panel">
   <h3 class="sr-only">{{t 'pages.challenge.parts.feedback'}}</h3>
   <div class="feedback-panel__view feedback-panel__view--link">
