--- a/mon-pix/app/templates/components/form-textfield.hbs
+++ b/mon-pix/app/templates/components/form-textfield.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable require-input-label --}}
+{{!-- template-lint-disable require-input-label no-unknown-arguments-for-builtin-components --}}
 <div class="form-textfield">
   <label for="{{@textfieldName}}" class="form-textfield__label">
     {{#unless @hideRequired}}{{#if @require}}<abbr title="{{t 'common.form.mandatory'}}" class="mandatory-mark">*</abbr> {{/if}}{{/unless}}
