--- a/mon-pix/app/templates/components/qcu-proposals.hbs
+++ b/mon-pix/app/templates/components/qcu-proposals.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable builtin-component-arguments --}}
 {{#each this.labeledRadios as |labeledRadio index|}}
 <p class="proposal-paragraph qcu-proposals">
   <Input type="radio"
