--- a/mon-pix/app/templates/components/qrocm-proposal.hbs
+++ b/mon-pix/app/templates/components/qrocm-proposal.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-implicit-this no-action require-input-label --}}
+{{!-- template-lint-disable no-implicit-this no-action require-input-label no-down-event-binding --}}
 <div class="qrocm-proposal">
   {{#each proposalBlocks as |block index|}}
 
