--- a/mon-pix/app/templates/components/routes/login-form.hbs
+++ b/mon-pix/app/templates/components/routes/login-form.hbs
@@ -1,3 +1,5 @@
+{{!-- template-lint-disable no-unknown-arguments-for-builtin-components --}}
+
 <div class="login-form">
   {{#if this.isErrorMessagePresent}}
     <div id="login-form-error-message" class="login-form__error-message error-message">{{t 'pages.login-or-register.login-form.error'}}</div>
