--- a/mon-pix/app/templates/components/user-certifications-detail-header.hbs
+++ b/mon-pix/app/templates/components/user-certifications-detail-header.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-implicit-this  --}}
+{{!-- template-lint-disable no-implicit-this no-redundant-fn --}}
 {{#if @certification.date}}
   <div class="user-certifications-detail-header">
     <UserCertificationsHexagonScore @score={{@certification.pixScore}} />
