--- a/mon-pix/app/templates/fill-in-campaign-code.hbs
+++ b/mon-pix/app/templates/fill-in-campaign-code.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-action require-input-label no-invalid-interactive no-triple-curlies --}}
+{{!-- template-lint-disable no-action require-input-label no-invalid-interactive no-triple-curlies no-unknown-arguments-for-builtin-components --}}
 {{page-title (t 'pages.fill-in-campaign-code.title')}}
 <BurgerMenu @animation="push" @translucentOverlay={{true}} as |burger|>
   <burger.outlet>
