--- a/mon-pix/app/templates/fill-in-certificate-verification-code.hbs
+++ b/mon-pix/app/templates/fill-in-certificate-verification-code.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-action require-input-label --}}
+{{!-- template-lint-disable no-action require-input-label no-unknown-arguments-for-builtin-components --}}
 {{page-title (t 'pages.fill-in-certificate-verification-code.title')}}
 
 <BurgerMenu @animation="push" @translucentOverlay={{true}} as |burger|>
