--- a/mon-pix/app/templates/terms-of-service.hbs
+++ b/mon-pix/app/templates/terms-of-service.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-implicit-this  --}}
+{{!-- template-lint-disable no-implicit-this  no-unknown-arguments-for-builtin-components --}}
 {{page-title (t 'pages.terms-of-service.title')}}
 <div class="terms-of-service-page">
   <div class="terms-of-service-form">
