--- a/mon-pix/app/templates/components/form-textfield-date.hbs
+++ b/mon-pix/app/templates/components/form-textfield-date.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable require-input-label --}}
+{{!-- template-lint-disable require-input-label no-unknown-arguments-for-builtin-components no-bare-strings --}}
 <div class="form-textfield">
   <label class="form-textfield__label">
     {{#if @require}}<abbr title="{{t 'common.form.mandatory'}}" class="mandatory-mark">*</abbr> {{/if}}
