[ADMIN] Prevent certification cancelling in edit mode

--- a/admin/app/components/certification/certification-status-select.hbs
+++ b/admin/app/components/certification/certification-status-select.hbs
@@ -8,6 +8,6 @@
     </select>
   {{else}}
     <span class="certification-status-select__label">Statut :</span>
-    <span class="certification-status-select__value">{{this.selectedOption.label}}</span>
+    <span class="certification-status-select__value">{{@certification.statusLabelAndValue.label}}</span>
   {{/if}}
 </div>
